k8s/app-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\Admin\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: app-db
  name: app-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app-db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\Admin\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/tmp-default: "true"
        io.kompose.service: app-db
    spec:
      containers:
        - env:
            - name: POSTGRES_PASSWORD
              value: password
            - name: POSTGRES_USER
              value: username
          image: mongo:latest
          name: app-db
          ports:
            - containerPort: 27017
              hostPort: 27017
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
